# steamroller

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile.2  Dockerfile.3  MANIFEST.in  README.md  README.rst  SConstruct  custom.py.template  pyproject.toml  setup.py
data/: SConstruct  steamroller_config.py.template
examples/: SConstruct
models/: fasttext_wrapper.py  logistic_regression_wrapper.py  naive_bayes_wrapper.py  prior_wrapper.py  random_forest_wrapper.py  seal_wrapper.py  svm_wrapper.py  valid_wrapper.py
scripts/: steamroller  text_to_concrete.py
site_scons/: create_split.py  evaluate.py  get_count.py  plot.py  steamroller_tools.py
src/: __init__.py  __main__.py  tools.py
src/data/: SConstruct  steamroller_config.json  steamroller_config.json.template  steamroller_config.py.template
src/data_sets/: __init__.py
src/feature_transformers/: __init__.py
src/measurements/: fscore.py
src/metrics/: __init__.py  accuracy.py  fscore.py
src/model_types/: cnn.py  fasttext.py  ngram.py  scikit_learn.py  vowpal_wabbit.py
src/models/: __init__.py  fasttext.py  ppm.py  scikit_learn.py  seal.py  vowpal_wabbit.py  vw.py
src/plots/: __init__.py  heatmap.py  whisker.py
src/scons/: __init__.py
src/static_files/: SConstruct  steamroller_config.json
src/steamroller/: __init__.py  environment.py  util.py
src/tasks/: .#count.py
src/tools/: io.py  (+9 more)
steamroller/: __init__.py
tools/: collate_resources.py  create_split.py  data_io.py  evaluate.py  evaluate_one.py  get_count.py  model_sizes.py  parse_grid_resources.py  parse_local_resources.py  plot.py
(+9 files in other folders)
